--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-site-in-express",
   "description": "Holman's personal website",
   "version": "0.0.1",
+  "devDependencies": {
+    "jscs": "latest"
+  },
   "dependencies": {
     "express": "4.x"
   }
