--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-site-in-express",
   "description": "Holman's personal website",
   "version": "0.0.1",
+  "repository" : {
+    "type" : "git",
+    "url" : "http://github.com/golmansax/my-site-in-express.git"
+  },
   "devDependencies": {
     "jscs": "latest"
   },
