--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "latest",
-    "express-handlebars": "latest"
+    "express-handlebars": "latest",
+    "i18n": "latest"
   }
 }
