--- a/.jscsrc
+++ b/.jscsrc
@@ -4,5 +4,7 @@
 
   "requireSpacesInAnonymousFunctionExpression": {
     "beforeOpeningRoundBrace": true
-  }
+  },
+
+  "disallowSpacesInAnonymousFunctionExpression": null
 }
