--- a/.jscsrc
+++ b/.jscsrc
@@ -6,5 +6,7 @@
     "beforeOpeningRoundBrace": true
   },
 
+  "disallowTrailingComma": true,
+
   "disallowSpacesInAnonymousFunctionExpression": null
 }
