--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: '0.10'
 script:
 - jscs .
-- jshint --exclude-files .gitignore
+- jshint --exclude-path .gitignore
 cache:
   directories:
   - node_modules
