Revert and fail...

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "build": "make build",
+    "postinstall": "npm run build",
     "start": "node server.js",
     "test": "make test",
     "watch": "make watch"
