--- a/.jscsrc
+++ b/.jscsrc
@@ -1,6 +1,6 @@
 {
   "preset": "google",
-  "excludeFiles": ["node_modules/**", "vendor/**"],
+  "excludeFiles": ["node_modules/**", "vendor/**", "public/assets/**"],
 
   "requireSpacesInAnonymousFunctionExpression": {
     "beforeOpeningRoundBrace": true
