--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js: '0.10'
 script:
 - travis-lint .travis.yml
-- jscs .
-- jshint . --exclude-path .jshintignore
+- jsxcs .
+- jsxhint . --exclude-path .jshintignore
 - npm test
 cache:
   directories:
