Update side projects

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "envify": "latest",
     "express": "latest",
     "express-handlebars": "latest",
+    "flux-crud-store": "latest",
     "i18n": "latest",
     "jeet": "latest",
     "nib": "latest",
