--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "zombie": "3.1.x"
   },
   "dependencies": {
+    "babel": "latest",
     "babelify": "latest",
     "browserify": "latest",
     "backbone-sortable-collection": "latest",
@@ -29,7 +30,6 @@
     "i18n": "latest",
     "jeet": "latest",
     "nib": "latest",
-    "node-jsx": "latest",
     "react": "latest",
     "react-bind-mixin": "latest",
     "reactify": "latest",
