--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js: '0.10'
 script:
 - travis-lint .travis.yml
 - jscs . --esprima=esprima-fb
+- make jshint
 - npm test
 cache:
   directories:
