--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: node_js
 node_js: '0.10'
 script:
 - travis-lint .travis.yml
-- jscs . --esprima=esprima-fb
+- make jscs
 - make jshint
 - npm test
 cache:
