--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "envify": "latest",
     "express": "latest",
     "flux-crud-store": "latest",
-    "i18n": "latest",
+    "i18next": "latest",
     "jade": "latest",
     "jeet": "latest",
     "nib": "latest",
