--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jeet": "latest",
     "nib": "latest",
     "react": "latest",
+    "react-sidebar": "latest",
     "react-bind-mixin": "latest",
     "reactify": "latest",
     "rupture": "latest",
