Cool, let this break!

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babelify": "latest",
     "browserify": "latest",
     "backbone-sortable-collection": "latest",
+    "classnames": "*",
     "connect-cachify-static": "latest",
     "envify": "latest",
     "express": "latest",
@@ -31,6 +32,8 @@
     "jeet": "latest",
     "nib": "latest",
     "react": "latest",
+    "react-mixin": "*",
+    "react-router": "latest",
     "react-sidebar": "latest",
     "react-bind-mixin": "latest",
     "reactify": "latest",
