--- a/.eslintrc
+++ b/.eslintrc
@@ -1,38 +1,3 @@
 {
-    "rules": {
-        "indent": [
-            2,
-            2
-        ],
-        "quotes": [
-            2,
-            "single"
-        ],
-        "linebreak-style": [
-            2,
-            "unix"
-        ],
-        "semi": [
-            2,
-            "always"
-        ],
-        "comma-dangle": [
-            2,
-            "always-multiline"
-        ]
-    },
-    "env": {
-        "es6": true,
-        "node": true,
-        "browser": true
-    },
-    "extends": "eslint:recommended",
-    "ecmaFeatures": {
-        "jsx": true,
-        "experimentalObjectRestSpread": true,
-        "modules": true
-    },
-    "plugins": [
-        "react"
-    ]
+  "extends": "eslint-config-airbnb"
 }
