--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,33 @@
 {
-  "extends": "eslint-config-airbnb"
+  "extends": "eslint-config-airbnb",
+
+  "rules": {
+    "react/jsx-quotes": [2, "single"],
+    "react/sort-comp": [2, {
+      "order": [
+        "displayName",
+        "propTypes",
+        "contextTypes",
+        "childContextTypes",
+        "mixins",
+        "statics",
+        "defaultProps",
+        "constructor",
+        "getDefaultProps",
+        "getInitialState",
+        "getChildContext",
+        "componentWillMount",
+        "componentDidMount",
+        "componentWillReceiveProps",
+        "shouldComponentUpdate",
+        "componentWillUpdate",
+        "componentDidUpdate",
+        "componentWillUnmount",
+        "/^_on.+$/",
+        "/^_get.+$/",
+        "/^_render.+$/",
+        "render"
+      ]
+    }]
+  }
 }
