Under 100 eslint errors!

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,10 +23,8 @@
         "componentWillUpdate",
         "componentDidUpdate",
         "componentWillUnmount",
-        "/^_on.+$/",
-        "/^_get.+$/",
-        "/^_render.+$/",
-        "render"
+        "render",
+        "/^_render.+$/"
       ]
     }]
   }
