Update package json

--- a/package.json
+++ b/package.json
@@ -7,42 +7,42 @@
     "url": "http://github.com/golmansax/my-site-in-express.git"
   },
   "devDependencies": {
-    "arrow-mocha": "latest",
-    "babel-eslint": "latest",
-    "chai": "latest",
-    "eslint": "latest",
-    "eslint-config-airbnb": "latest",
-    "eslint-plugin-react": "latest",
-    "jscs": "latest",
-    "mocha": "latest",
-    "stink-bomb": "latest",
-    "travis-lint": "latest",
-    "watchify": "latest",
+    "arrow-mocha": "*",
+    "babel-eslint": "*",
+    "chai": "*",
+    "eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-plugin-react": "*",
+    "jscs": "*",
+    "mocha": "*",
+    "stink-bomb": "*",
+    "travis-lint": "*",
+    "watchify": "*",
     "zombie": "< 4"
   },
   "dependencies": {
-    "babel": "latest",
-    "babelify": "latest",
-    "browserify": "latest",
-    "backbone-sortable-collection": "latest",
+    "babel": "*",
+    "babelify": "*",
+    "browserify": "*",
+    "backbone-sortable-collection": "*",
     "classnames": "*",
-    "connect-cachify-static": "latest",
-    "envify": "latest",
-    "express": "latest",
-    "flux-crud-store": "latest",
-    "i18next": "latest",
-    "jeet": "latest",
-    "nib": "latest",
-    "react": "latest",
-    "react-document-title": "latest",
+    "connect-cachify-static": "*",
+    "envify": "*",
+    "express": "*",
+    "flux-crud-store": "*",
+    "i18next": "*",
+    "jeet": "*",
+    "nib": "*",
+    "react": "*",
+    "react-document-title": "*",
     "react-mixin": "*",
-    "react-router": "latest",
-    "react-bind-mixin": "latest",
-    "reactify": "latest",
-    "rupture": "latest",
-    "stylus": "latest",
-    "stylus-type-utils": "latest",
-    "uglify-js": "latest"
+    "react-router": "*",
+    "react-bind-mixin": "*",
+    "reactify": "*",
+    "rupture": "*",
+    "stylus": "*",
+    "stylus-type-utils": "*",
+    "uglify-js": "*"
   },
   "scripts": {
     "build": "make build",
