--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "envify": "*",
     "express": "*",
     "flux-crud-store": "*",
+    "font-awesome-stylus": "*",
     "i18next": "*",
     "jeet": "*",
     "nib": "*",
