--- a/.stylintrc
+++ b/.stylintrc
@@ -1,38 +1,35 @@
 {
   "blocks": false,
-  "brackets": {
-    "expect": "always",
-    "error": false
-  },
+  "brackets": false,
   "colons": "never",
   "colors": "always",
   "commaSpace": "always",
   "commentSpace": "always",
   "cssLiteral": "never",
-  "depthLimit": false,
+  "depthLimit": 3,
   "duplicates": true,
   "efficient": "always",
-  "extendPref": false,
-  "globalDupe": false,
-  "indentPref": false,
+  "extendPref": "@extend",
+  "globalDupe": true,
+  "indentPref": 2,
   "leadingZero": "never",
   "maxErrors": false,
   "maxWarnings": false,
-  "mixed": false,
-  "namingConvention": false,
-  "namingConventionStrict": false,
+  "mixed": true,
+  "namingConvention": "lowercase-dash",
+  "namingConventionStrict": true,
   "none": "never",
   "noImportant": true,
-  "parenSpace": false,
+  "parenSpace": "never",
   "placeholders": "always",
   "prefixVarsWithDollar": "always",
-  "quotePref": false,
+  "quotePref": "single",
   "semicolons": "never",
   "sortOrder": "alphabetical",
   "stackedProperties": "never",
   "trailingWhitespace": "never",
-  "universal": false,
+  "universal": "never",
   "valid": true,
   "zeroUnits": "never",
-  "zIndexNormalize": false
+  "zIndexNormalize": 10
 }
