--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "my-site-in-express",
   "description": "Holman's personal website",
   "version": "0.0.1",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "http://github.com/golmansax/my-site-in-express.git"
   },
   "devDependencies": {
     "arrow-mocha": "*",
-    "babel-eslint": "*",
     "chai": "*",
     "eslint": "*",
-    "eslint-config-airbnb": "*",
-    "eslint-plugin-react": "*",
+    "eslint-config-golmansax": "*",
     "jscs": "*",
     "mocha": "*",
     "stink-bomb": "*",
