Update stylint config

--- a/.stylintrc
+++ b/.stylintrc
@@ -1,12 +1,12 @@
 {
   "blocks": false,
-  "brackets": false,
+  "brackets": "always",
   "colons": "never",
   "colors": "always",
   "commaSpace": "always",
   "commentSpace": "always",
   "cssLiteral": "never",
-  "depthLimit": 3,
+  "depthLimit": 5,
   "duplicates": true,
   "efficient": "always",
   "extendPref": "@extend",
