--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postinstall": "npm prune && npm run build",
     "start": "node index.js",
     "start-dev": "nodemon -e js,jsx,json,styl",
+    "start-forever": "forever start index.js",
     "test": "make test",
     "watch": "make watch"
   }
