--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "zombie": "*"
   },
   "dependencies": {
-    "babel-core": "*",
+    "babel-core": "^6.1.20",
     "babel-plugin-transform-object-assign": "*",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
@@ -43,10 +43,10 @@
     "i18next": "*",
     "jeet": "*",
     "nib": "*",
-    "react": "*",
+    "react": "< 0.14",
     "react-document-title": "*",
     "react-mixin": "*",
-    "react-router": "*",
+    "react-router": "< 1",
     "react-bind-mixin": "*",
     "reactify": "*",
     "rupture": "*",
