Slowly getting this working again

--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "dependencies": {
     "babel-core": "^6.1.20",
+    "babel-plugin-syntax-object-rest-spread": "*",
     "babel-plugin-transform-object-assign": "*",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
+    "babel-preset-stage-0": "*",
     "babelify": "*",
     "browserify": "*",
     "backbone-sortable-collection": "*",
@@ -40,25 +42,24 @@
     "express": "*",
     "flux-crud-store": "*",
     "font-awesome-stylus": "*",
+    "history": "*",
     "i18next": "*",
     "jeet": "*",
     "nib": "*",
-    "react": "< 0.14",
+    "react": "*",
+    "react-dom": "*",
     "react-document-title": "*",
     "react-mixin": "*",
-    "react-router": "< 1",
+    "react-router": "*",
     "react-bind-mixin": "*",
-    "reactify": "*",
     "rupture": "*",
+    "scroll-behavior": "*",
     "stylus": "*",
     "uglify-js": "*"
   },
   "scripts": {
-    "build": "make build",
-    "postinstall": "npm prune && npm run build",
-    "start": "node index.js",
-    "start-dev": "nodemon -e js,jsx,json,styl",
-    "start-forever": "PORT=7704 forever start index.js",
+    "postinstall": "npm prune && ./scripts/npm_postinstall.sh",
+    "start": "make start-dev",
     "test": "make test",
     "watch": "make watch"
   }
