Getting closer to finishing this awful transition

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "golmansax"
+  "extends": "golmansax",
+  "parser": "babel-eslint",
+  "rules": {
+    "react/react-in-jsx-scope": 0,
+    "react/no-multi-comp": [2, { "ignoreStateless": true }]
+  }
 }
