--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-plugin-react": "*",
     "mocha": "*",
     "stink-bomb": "*",
-    "stylint": "*",
+    "stylint": "< 1.3",
     "travis-lint": "*",
     "watchify": "*",
     "zombie": "*"
