--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,3 @@
 {
-  "extends": "golmansax",
-  "parser": "babel-eslint",
-  "rules": {
-    "react/react-in-jsx-scope": 0,
-    "react/no-multi-comp": [2, { "ignoreStateless": true }]
-  }
+  "extends": "golmansax"
 }
