--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "arrow-mocha": "*",
+    "backbone-sortable-collection": "*",
     "babel-cli": "*",
     "babel-eslint": "*",
     "chai": "*",
@@ -20,7 +21,9 @@
     "eslint-config-airbnb": "*",
     "eslint-config-golmansax": "*",
     "eslint-plugin-react": "*",
+    "flux-crud-store": "*",
     "fs-extra": "*",
+    "global-mocha": "*",
     "mkdirp": "*",
     "mocha": "*",
     "stink-bomb": "*",
@@ -38,12 +41,10 @@
     "babel-preset-stage-0": "*",
     "babelify": "*",
     "browserify": "*",
-    "backbone-sortable-collection": "*",
     "classnames": "*",
     "connect-cachify-static": "*",
     "envify": "*",
     "express": "*",
-    "flux-crud-store": "*",
     "font-awesome-stylus": "*",
     "history": "*",
     "i18next": "*",
