--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-site-in-express",
   "description": "Holman's personal website",
+  "private": true,
   "version": "0.0.1",
   "license": "MIT",
   "engines": {
@@ -12,28 +13,10 @@
   },
   "devDependencies": {
     "arrow-mocha": "*",
+    "babel-core": "^6.1.20",
     "backbone-sortable-collection": "*",
     "babel-cli": "*",
     "babel-eslint": "*",
-    "chai": "*",
-    "dirty-chai": "*",
-    "eslint": "*",
-    "eslint-config-airbnb": "*",
-    "eslint-config-golmansax": "*",
-    "eslint-plugin-react": "*",
-    "flux-crud-store": "*",
-    "fs-extra": "*",
-    "global-mocha": "*",
-    "mkdirp": "*",
-    "mocha": "*",
-    "stink-bomb": "*",
-    "stylint": "< 1.3",
-    "travis-lint": "*",
-    "watchify": "*",
-    "zombie": "*"
-  },
-  "dependencies": {
-    "babel-core": "^6.1.20",
     "babel-plugin-syntax-object-rest-spread": "*",
     "babel-plugin-transform-object-assign": "*",
     "babel-preset-es2015": "*",
@@ -41,14 +24,25 @@
     "babel-preset-stage-0": "*",
     "babelify": "*",
     "browserify": "*",
+    "chai": "*",
     "classnames": "*",
     "connect-cachify-static": "*",
+    "dirty-chai": "*",
     "envify": "*",
+    "eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-config-golmansax": "*",
+    "eslint-plugin-react": "*",
     "express": "*",
+    "flux-crud-store": "*",
     "font-awesome-stylus": "*",
+    "fs-extra": "*",
+    "global-mocha": "*",
     "history": "*",
     "i18next": "*",
     "jeet": "*",
+    "mkdirp": "*",
+    "mocha": "*",
     "nib": "*",
     "react": "*",
     "react-dom": "*",
@@ -58,8 +52,13 @@
     "react-bind-mixin": "*",
     "rupture": "*",
     "scroll-behavior": "*",
+    "stink-bomb": "*",
+    "stylint": "< 1.3",
     "stylus": "*",
-    "uglify-js": "*"
+    "travis-lint": "*",
+    "uglify-js": "*",
+    "watchify": "*",
+    "zombie": "*"
   },
   "scripts": {
     "postinstall": "./scripts/npm_postinstall.sh",
