Lock down i18next and fix lint

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "fs-extra": "*",
     "global-mocha": "*",
     "history": "*",
-    "i18next": "*",
+    "i18next": "< 2",
     "jeet": "*",
     "mkdirp": "*",
     "mocha": "*",
