--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "connect-cachify-static": "*",
     "dirty-chai": "*",
     "envify": "*",
-    "eslint": "*",
+    "eslint": "^2.0.0",
     "eslint-config-airbnb": "*",
     "eslint-config-golmansax": "*",
     "eslint-plugin-react": "*",
@@ -38,7 +38,7 @@
     "font-awesome-stylus": "*",
     "fs-extra": "*",
     "global-mocha": "*",
-    "history": "*",
+    "history": "^1.17.0",
     "i18next": "< 2",
     "jeet": "*",
     "mkdirp": "*",
@@ -48,7 +48,7 @@
     "react-dom": "*",
     "react-helmet": "*",
     "react-mixin": "*",
-    "react-router": "*",
+    "react-router": "^1.0.0",
     "react-bind-mixin": "*",
     "rupture": "*",
     "scroll-behavior": "*",
