--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "font-awesome-stylus": "*",
     "fs-extra": "*",
     "global-mocha": "*",
+    "history": "^2.0.0",
     "i18next": "< 2",
     "jeet": "*",
     "mkdirp": "*",
@@ -49,6 +50,7 @@
     "react-router": "^2.0.0",
     "react-bind-mixin": "*",
     "rupture": "*",
+    "scroll-behavior": "*",
     "stink-bomb": "*",
     "stylint": "< 1.3",
     "stylus": "*",
