Separate out dev and normal deps

--- a/package.json
+++ b/package.json
@@ -13,8 +13,25 @@
   },
   "devDependencies": {
     "arrow-mocha": "*",
-    "babel-core": "^6.1.20",
     "backbone-sortable-collection": "*",
+    "chai": "*",
+    "dirty-chai": "*",
+    "eslint": "^2.0.0",
+    "eslint-config-airbnb": "*",
+    "eslint-config-golmansax": "*",
+    "eslint-plugin-react": "*",
+    "flux-crud-store": "*",
+    "global-mocha": "*",
+    "mocha": "*",
+    "react-bind-mixin": "*",
+    "stink-bomb": "*",
+    "stylint": "< 1.3",
+    "travis-lint": "*",
+    "watchify": "*",
+    "zombie": "*"
+  },
+  "dependencies": {
+    "babel-core": "^6.1.20",
     "babel-cli": "*",
     "babel-eslint": "*",
     "babel-plugin-syntax-object-rest-spread": "*",
@@ -24,40 +41,25 @@
     "babel-preset-stage-0": "*",
     "babelify": "*",
     "browserify": "*",
-    "chai": "*",
     "classnames": "*",
     "connect-cachify-static": "*",
-    "dirty-chai": "*",
     "envify": "*",
-    "eslint": "^2.0.0",
-    "eslint-config-airbnb": "*",
-    "eslint-config-golmansax": "*",
-    "eslint-plugin-react": "*",
     "express": "*",
-    "flux-crud-store": "*",
     "font-awesome-stylus": "*",
     "fs-extra": "*",
-    "global-mocha": "*",
     "history": "^2.0.0",
     "i18next": "< 2",
     "jeet": "*",
     "mkdirp": "*",
-    "mocha": "*",
     "nib": "*",
     "react": "*",
     "react-dom": "*",
     "react-helmet": "*",
     "react-router": "^2.0.0",
-    "react-bind-mixin": "*",
     "rupture": "*",
     "scroll-behavior": "*",
-    "stink-bomb": "*",
-    "stylint": "< 1.3",
     "stylus": "*",
-    "travis-lint": "*",
-    "uglify-js": "*",
-    "watchify": "*",
-    "zombie": "*"
+    "uglify-js": "*"
   },
   "scripts": {
     "postinstall": "./scripts/npm_postinstall.sh",
