Build only with prod dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: false
 language: node_js
 install:
-- NODE_ENV=development npm install
-before_script:
+- npm install
 - make build
+- NODE_ENV=development npm install --dev-only
 script:
 - travis-lint .travis.yml
 - make eslint
