--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "devDependencies": {
     "arrow-mocha": "*",
+    "babel-eslint": "^6.0.0-beta",
     "backbone-sortable-collection": "*",
     "chai": "*",
     "dirty-chai": "*",
-    "eslint": "~2.2.0",
+    "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-config-golmansax": "*",
     "eslint-plugin-react": "*",
@@ -34,7 +35,6 @@
   "dependencies": {
     "babel-core": "^6.1.20",
     "babel-cli": "*",
-    "babel-eslint": "*",
     "babel-plugin-syntax-object-rest-spread": "*",
     "babel-plugin-transform-object-assign": "*",
     "babel-preset-es2015": "*",
