Turn node_modules cache on and appease lint

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: false
 language: node_js
+cache:
+  directories:
+  - node_modules
 install:
 - npm install
 - NODE_ENV=development npm install --dev-only
