--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mocha": "*",
     "nock": "*",
     "nodemon": "*",
+    "npm-shrinkwrap": "^6.0.1",
     "react-bind-mixin": "*",
     "stink-bomb": "*",
     "stylint": "< 1.3",
@@ -38,8 +39,8 @@
     "zombie": "*"
   },
   "dependencies": {
-    "babel-core": "^6.1.20",
     "babel-cli": "*",
+    "babel-core": "^6.1.20",
     "babel-plugin-syntax-object-rest-spread": "*",
     "babel-plugin-transform-object-assign": "*",
     "babel-preset-es2015": "*",
@@ -55,15 +56,15 @@
     "fs-extra": "*",
     "history": "^2.0.0",
     "i18next": "< 2",
-    "jeet": "*",
+    "jeet": "6.1.2",
     "mkdirp": "*",
     "nib": "*",
     "react": "*",
     "react-dom": "*",
     "react-helmet": "*",
     "react-router": "^2.0.0",
+    "react-router-scroll": "*",
     "rupture": "*",
-    "scroll-behavior": "*",
     "stylus": "*",
     "uglify-js": "*"
   },
