--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-config-golmansax": "*",
-    "eslint-plugin-import": "*",
+    "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "*",
+    "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "*",
     "flux-crud-store": "*",
     "global-mocha": "*",
