Update name of repository

--- a/nginx/portfolio.conf
+++ b/nginx/portfolio.conf
@@ -16,7 +16,7 @@ server {
   listen [::]:80 default_server ipv6only=on;
 
   location / {
-    # Routing it to my-site-in-express server
+    # Routing it to portfolio server
     proxy_pass http://localhost:7704;
   }
 }
