Try using a different shrinkwrap

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "mocha": "*",
     "nock": "*",
     "nodemon": "*",
-    "npm-shrinkwrap": "*",
-    "prune-shrinkwrap": "^0.0.2",
+    "npm-shrinkwrap": "^6.0.0",
+    "prune-shrinkwrap": "^1.0.0",
     "react-bind-mixin": "*",
     "stink-bomb": "*",
     "stylint": "< 1.3",
