--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,27 @@
 sudo: false
 language: node_js
 node_js: 7.1
+
+cache:
+  yarn: true
+  directories:
+    - node_modules # NPM packages
+
 install:
-- npm install
-- NODE_ENV=development npm install --dev-only
+- yarn install --production=false
+
 script:
 - travis-lint .travis.yml
 - make eslint
 - make stylint
 - npm test
+
 env:
   global:
   - NODE_ENV=production
   - secure: PoJ9o3UKTfrc74MabLmZRXnmqEHEa+uY2nbW2nUUrwE215jOaL2qmDnFSGytSXaqxU8hxPmnSbSo11lp7623Kfu4LfWiT+o4xTqLEXk9Mgqt1pjrrtLWAxOcswzOKCwDNeMmVhSIuBsrfoeOcMs0WuZ2mqcEnbF+TZhcfkB6mvk=
   - secure: OHKm2B9RoiJ+QpOx6tBbW4+HJbqkT9rk+kp/UisSXGqAeB0c6c5AEBOwmzRUIIKPhuZN7KauFo8HF/O33+079JxvuaXyc0LCF+4NSCvNxeIgmgxDou855VmvettCdnwRERAZxACwmXtoir3k6fZmfKI1dszhyknQPHKU6VtYcS8=
   - secure: Kap43AaU3Udp2ocxc3Ln5ztsWYlQJr/AlqoiXkozEZso/SMXbjlVmrf6YprZ6YfZgYXxrXZhRST9l/QJPu+uS1vc63iJSnPVYTI616eBVFKr6Yr30BXmJ9HJTrXA8B8mULj1gu+PtWC3memTM6r2TZynF6hxXHmbmbYoHDxswK8=
+
 after_success:
 - "./scripts/deploy_gh_pages.sh"
