--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ cache:
   directories:
     - node_modules # NPM packages
 
+before_install:
+- curl -o- -L https://yarnpkg.com/install.sh | bash
+
 install:
 - yarn install --production=false
 
