--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 sudo: false
 language: node_js
 node_js: 7.1
-group: stable
 
 cache:
   yarn: true
   directories:
     - node_modules # NPM packages
+
+before_install:
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.27.5
+- export PATH="$HOME/.yarn/bin:$PATH"
 
 install:
 - yarn install --production=false
