--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ env:
   - secure: PoJ9o3UKTfrc74MabLmZRXnmqEHEa+uY2nbW2nUUrwE215jOaL2qmDnFSGytSXaqxU8hxPmnSbSo11lp7623Kfu4LfWiT+o4xTqLEXk9Mgqt1pjrrtLWAxOcswzOKCwDNeMmVhSIuBsrfoeOcMs0WuZ2mqcEnbF+TZhcfkB6mvk=
   - secure: OHKm2B9RoiJ+QpOx6tBbW4+HJbqkT9rk+kp/UisSXGqAeB0c6c5AEBOwmzRUIIKPhuZN7KauFo8HF/O33+079JxvuaXyc0LCF+4NSCvNxeIgmgxDou855VmvettCdnwRERAZxACwmXtoir3k6fZmfKI1dszhyknQPHKU6VtYcS8=
   - secure: Kap43AaU3Udp2ocxc3Ln5ztsWYlQJr/AlqoiXkozEZso/SMXbjlVmrf6YprZ6YfZgYXxrXZhRST9l/QJPu+uS1vc63iJSnPVYTI616eBVFKr6Yr30BXmJ9HJTrXA8B8mULj1gu+PtWC3memTM6r2TZynF6hxXHmbmbYoHDxswK8=
+  - secure: flL/vngkUw3J6YvHgUg6gofazrgGCeM2hJnqgVm0KmGZO2FLpkFmtFy5MQiJVh/bC37YrKQ+RPyn8IOps+CZpTxAh3OBtEeJ24ynvGbnEZ12IpJp3U5w5nc7nUPCAstphgC2lCZtGEgGsGgoxBwsNHkdfJHCufqc0a0BdlXRhV8=
 
 after_success:
 - "./scripts/deploy_gh_pages.sh"
