--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "engines": {
-    "node": "6.6.x"
+    "node": "8.x.x"
   },
   "repository": {
     "type": "git",
@@ -38,7 +38,7 @@
     "stink-bomb": "*",
     "stylint": "< 1.3",
     "watchify": "*",
-    "zombie": "*"
+    "zombie": "^5.0.7"
   },
   "dependencies": {
     "babel-cli": "*",
