--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,9 +24,9 @@ jobs:
         with:
           path: ~/node_modules
           # Look to see if there is a cache hit for the corresponding requirements file
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-yarn-
             ${{ runner.os }}-
 
       - run: yarn install --production=false
