--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on: [push]
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
 
     env:
@@ -32,19 +32,11 @@ jobs:
       - run: yarn install --production=false
       - run: make eslint
       - run: make stylint
-      - run: npm test
+      - run: yarn test
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    env:
-      NODE_ENV: production
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 9
-
-      - run: ./scripts/deploy_gh_pages.sh
+      - name: Deploy with gh-pages
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          yarn gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
