--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "*",
     "font-awesome-stylus": "*",
     "fs-extra": "*",
+    "gh-pages": "^3.2.3",
     "history": "^2.0.0",
     "i18next": "< 2",
     "jeet": "6.1.2",
