--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "uglify-js": "*"
   },
   "scripts": {
+    "deploy": "gh-pages -d public",
     "postinstall": "./scripts/npm_postinstall.sh",
     "start": "make start",
     "test": "make test"
